--- a/package.json
+++ b/package.json
@@ -23,11 +23,25 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.18",
     "angular2-masonry": "^0.4.0",
     "bootstrap": "^4.0.0-alpha.6",
-    "core-js": "^2.4.1",
     "raven-js": "^3.9.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.6.23",
+
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.2",
+    "config": "^1.24.0",
+    "cookie-parser": "^1.4.3",
+    "core-js": "^2.4.1",
+    "debug": "^2.6.0",
+    "ejs": "^2.5.5",
+    "express": "^4.14.0",
+    "express-session": "^1.14.2",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-google-oauth2": "^0.1.6",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4"
   },
   "devDependencies": {
     "@angular/compiler-cli": "2.2.1",
