--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "angular-cli": {},
   "scripts": {
     "start": "ng serve",
-    "lint": "tslint \"src/**/*.ts\"",
+    "express-prod": "npm export NODE_ENV=production; node ./server/app",
+    "express-dev": "node ./server/app",
+    "lint": "tslint \"client/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor"
