--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ng serve",
     "express-prod": "npm export NODE_ENV=production; node ./server/app",
-    "express-dev": "node ./server/app",
+    "express-dev": "export NODE_ENV=development; node ./server/app",
     "lint": "tslint \"client/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
@@ -31,19 +31,24 @@
     "zone.js": "^0.6.23",
 
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.15.2",
     "config": "^1.24.0",
-    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "connect-flash" : "~0.1.1",     
     "debug": "^2.6.0",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
-    "express-session": "^1.14.2",
-    "morgan": "^1.7.0",
+    "mongoose": "^4.7.6",
     "passport": "^0.3.2",
     "passport-google-oauth2": "^0.1.6",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "passport-facebook" : "~1.0.2", 
+    "raven": "^1.1.1",
+
+    "morgan": "^1.7.0",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "express-session": "^1.14.2"
   },
   "devDependencies": {
     "@angular/compiler-cli": "2.2.1",
@@ -58,6 +63,7 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
+    "nodemon": "^1.11.0",
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
