--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "tslint \"client/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "postinstall": "ng build"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +30,12 @@
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23",
+
+    "@angular/compiler-cli": "2.2.1",
+    "@types/node": "^6.0.42",
+    "angular-cli": "1.0.0-beta.21",
+    "typescript": "~2.0.3",
+    "webdriver-manager": "10.2.5",
 
     "bcrypt-nodejs": "0.0.3",
     "config": "^1.24.0",
