--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.18",
     "angular2-masonry": "^0.4.0",
     "bootstrap": "^4.0.0-alpha.6",
+    "core-js": "^2.4.1",
     "raven-js": "^3.9.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
@@ -38,8 +39,8 @@
     "webdriver-manager": "10.2.5",
 
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.4.7",
     "config": "^1.24.0",
-    "core-js": "^2.4.1",
     "connect-flash" : "~0.1.1",     
     "debug": "^2.6.0",
     "ejs": "^2.5.5",
