--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "debug": "^2.6.0",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
+    "express-validator": "^3.1.2",
     "mongoose": "^4.7.6",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
