--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/router": "3.2.1",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.18",
+    "angular2-cookie": "^1.2.6",
     "angular2-masonry": "^0.4.0",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
