--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "postinstall": "ng build"
+    "postinstall": "ng build --env=prod"
   },
   "private": true,
   "dependencies": {
